добавлен генератор рандомных пользовательских данных с выводом автара и информации о человеке.

--- a/Урок2 (HTTP, AJAX)/index.html
+++ b/Урок2 (HTTP, AJAX)/index.html
@@ -12,6 +12,7 @@
 <body>
 	<div class="nav">
 		<button id="btn-1">Get Data</button>
+		<button id="btn-2">Get Random People</button>
 	</div>
 	<div id="box"></div>
 	<script src="script.js"></script>
