--- a/Урок4(Адаптивная верстка Bootstrap4)/index.html
+++ b/Урок4(Адаптивная верстка Bootstrap4)/index.html
@@ -2,41 +2,53 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8"/>
+    <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Smart Guys Company</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" media="screen" href="css/main.css" />
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
 </head>
 
 <body>
+    <nav class="navbar navbar-dark navbar-expand-sm bg-dark" role="navigation">
+        <a class="navbar-brand text-light">Smart Guys Company</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar1" aria-controls="navbar1" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="navbar-collapse collapse" id="navbar1">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link active text-light" href="#">О нас</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-light" href="#">Наша команда</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-light" href="#">Блог</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Проекты</a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
+                        <a class="dropdown-item" href="#">Action</a>
+                        <a class="dropdown-item" href="#">Another action</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Something else here</a>
+                    </div>
+                </li>
+            </ul>
+            <form class="form-inline mb-0 mt-2 mt-md-0">
+                <input class="form-control mr-sm-2" type="search" placeholder="найти" aria-label="Search">
+                <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Поиск</button>
+            </form>
+        </div>
+    </nav>
     <header class="header">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-3">
-                    <h1>Smart Guys Company <h1>
-                </div>
-                <div class="col-lg-5 ml-auto">
-                    <nav class="menu">
-                        <ul class="menu__list d-flex ">
-                            <li class="menu-item">
-                                <a href="#">О нас</a>
-                            </li>
-                            <li class="menu-item">
-                                <a href="#">Проекты</a>
-                            </li>
-                            <li class="menu-item">
-                                <a href="#">Блог</a>
-                            </li>
-                            <li class="menu-item">
-                                <a href="#">Наша команда</a>
-                            </li>
-                        </ul>
-                    </nav>
-                </div>
-            </div>
             <div class="row">
                 <div class="col-lg-6">
                     <div class="subtitle ">
